--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -1,339 +1,382 @@
-{
-  "commerceSuiteVersion": "1905.0",
-  "extensions": [
-     "acceleratorcms",
-     "adaptivesearchbackoffice",
-     "addonsupport",
-     "b2ctelcobackoffice",
-     "b2ctelcofulfillmentprocess",
-     "b2ctelcostore",
-     "utilitiesstore",
-     "mediastore",
-     "b2ctelcoaddon",
-     "b2ctelcooccaddon",
-     "b2ctelcotmfwebservices",
-     "b2ctelcowebservices",
-     "commerceservicesbackoffice",
-     "solrfacetsearchbackoffice",
-     "solrserver",
-     "subscriptionbackoffice",
-     "yacceleratorstorefront",
-     "yacceleratorcore",
-     "ycommercewebservices",
-     "cmsbackoffice",
-     "cmswebservices",
-     "previewwebservices",
-     "smarteditwebservices",
-     "cmssmarteditwebservices",
-     "permissionswebservices",
-     "smarteditaddon",
-     "cmssmartedit",
-     "customerticketingaddon",
-     "customersupportbackoffice",
-     "personalizationwebservices",
-     "previewpersonalizationweb",
-     "personalizationcmsweb",
-     "personalizationsmartedit",
-     "personalizationservicesbackoffice",
-     "personalizationcmsbackoffice",
-     "personalizationservices",
-     "personalizationfacades",
-     "acceleratorservices",
-     "assistedservicefacades",
-     "assistedservicestorefront",
-     "assistedservicecustomerinterestsaddon",
-    "modeltacceleratorservices"
-  ],
-  "properties": [
-    {
-      "key": "impex.import.workers",
-      "value": "1"
-    },
-	{
-      "key": "catalog.sync.workers",
-      "value": "1"
-    },
-    {
-      "key": "kernel.events.cluster.jgroups.channel",
-      "value": "disable"
-    },
-    {
-      "key": "datahub.publication.saveImpex",
-      "value": ""
-    },
-    {
-      "key": "kernel.autoInitMode",
-      "value": "update"
-    },
-    {
-      "key": "mail.from",
-      "value": "testmail9110@gmail.com"
-    },
-    {
-      "key": "mail.replyto",
-      "value": "testmail9110@gmail.com"
-    },
-    {
-      "key": "mail.smtp.server",
-      "value": "smtp.gmail.com"
-    },
-    {
-      "key": "mail.smtp.port",
-      "value": "587"
-    },
-    {
-      "key": "mail.smtp.user",
-      "value": "testmail9110@gmail.com"
-    },
-    {
-      "key": "mail.smtp.password",
-      "value": "PWD11111"
-    },
-    {
-      "key": "mail.smtp.starttls.enable",
-      "value": "true"
-    },
-    {
-      "key": "mail.use.tls",
-      "value": "true"
-    },
-    {
-      "key": "storefront.show.debug.info",
-      "value": "true"
-    },
-    {
-      "key": "commerceservices.default.desktop.ui.experience",
-      "value": "responsive"
-    },
-    {
-      "key": "googleEmbedApiKey",
-      "value": "AIzaSyD34TXbUsiyJnysJ-1Un657elxVy_OYpTs"
-    },
-    {
-      "key": "storefront.show.checkout.flows",
-      "value": "true"
-    },
-    {
-      "key" : "b2ctelcotmfwebservices.api.base.url",
-      "value" : "https://b2ctelco.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.b2ctelco.http",
-      "value":"http://b2ctelco.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.b2ctelco.https",
-      "value":"https://b2ctelco.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.media.http",
-      "value":"http://media.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.media.https",
-      "value":"https://media.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.utilities.http",
-      "value":"http://utilities.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    },
-    {
-      "key":"website.utilities.https",
-      "value":"https://utilities.cy8u-telcoacce1-s1-public.model-t.cc.commerce.ondemand.com"
-    }
-  ],
-  "storefrontAddons": [
-    {
-      "addon": "b2ctelcoaddon",
-      "storefront": "yacceleratorstorefront",
-      "template": "yacceleratorstorefront"
-    },
-    {
-      "addon": "smarteditaddon",
-      "storefront": "yacceleratorstorefront",
-      "template": "yacceleratorstorefront"
-    },
-    {
-      "addon": "assistedservicestorefront",
-      "storefront": "yacceleratorstorefront",
-      "template": "yacceleratorstorefront"
-    },
-    {
-      "addon": "assistedservicecustomerinterestsaddon",
-      "storefront": "yacceleratorstorefront",
-      "template": "yacceleratorstorefront"
-    },
-    {
-      "addon": "customerticketingaddon",
-      "storefront": "yacceleratorstorefront",
-      "template": "yacceleratorstorefront"
-    },
-	{
-	  "addon": "b2ctelcooccaddon",
-      "storefront": "ycommercewebservices",
-      "template": "ycommercewebservices"
-	}
-  ],
-  "tests": {
+"commerceSuiteVersion": "1905.2",
     "extensions": [
-	"b2ctelcobackoffice",
-     "b2ctelcofulfillmentprocess",
-     "b2ctelcostore",
-     "utilitiesstore",
-     "mediastore",
-     "b2ctelcoaddon",
-     "b2ctelcotmfwebservices",
-     "b2ctelcowebservices"
+        "modeltacceleratorservices",
+
+        "xyformsbackoffice",
+        "xyformssamples",
+	    "xyformsstorefrontcommons",
+        "xyformsweb",
+        "adaptivesearchsolr",
+        "adaptivesearchbackoffice",
+        "commerceservicesbackoffice",
+        "solrfacetsearchbackoffice",
+        "customersupportbackoffice",
+        "solrserver",
+        "yacceleratorcockpits",
+        "yacceleratorinitialdata",
+        "yacceleratorfulfilmentprocess",
+        "yacceleratorstorefront",
+        "ycommercewebservices",
+
+        "acceleratorwebservicesaddon",
+
+        "cmswebservices",
+        "previewwebservices",
+        "smarteditwebservices",
+        "cmssmarteditwebservices",
+        "permissionswebservices",
+        "smarteditaddon",
+        "cmssmartedit",
+        "cmsbackoffice",
+        "pcmbackoffice",
+        "backofficesolrsearch",
+        "configurablebundlecockpits",
+
+        "assistedservicestorefront",
+
+	   "financialb2baddon",
+	   "financialb2bbackoffice",
+	   "financialacceleratorstorefront",
+        "financialstore",
+        "financialsmartedit",
+        "financialoccaddon",
+        "financialwebservices",
+        "financialbackoffice",
+        "orbeonweb",
+        "odata2webservices",
+        "apiregistryservices",
+        "integrationservices",
+
+        "commerceorgaddon",
+        "cmsoccaddon",
+        "notificationoccaddon",
+		"integrationbackoffice"
+
     ],
-    "annotations": [
-      "UnitTests",
-      "IntegrationTests"
+	"extensionPacks": [
+       {
+           "artifact": "de.hybris.platform:hybris-fsa-suite:1907.1"
+       }
     ],
-    "packages": [
-      "de.hybris.platform.*"
-    ]
-  },
-  "webTests": {
-    "extensions": [
-      "b2ctelcowebservices"
+    "storefrontAddons" : [
+        {
+            "addon": "xyformsstorefrontcommons",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addon": "financialacceleratorstorefront",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addon": "assistedservicestorefront",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addon": "smarteditaddon",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addon": "acceleratorwebservicesaddon",
+            "storefront": "ycommercewebservices",
+            "template": "ycommercewebservices"
+        },
+        {
+            "addon": "financialoccaddon",
+            "storefront": "ycommercewebservices",
+            "template": "ycommercewebservices"
+        },
+        {
+            "addon": "commerceorgaddon",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
+            "addon": "cmsoccaddon",
+            "storefront": "ycommercewebservices",
+            "template": "ycommercewebservices"
+        },
+        {
+            "addon": "financialb2baddon",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        }
     ],
-    "excludedPackages": [
-      "de.hybris.platform.*"
-    ]
-  },
-  "aspects": [
-    {
-      "name": "backoffice",
-      "properties": [
+    "properties": [
         {
-          "key": "test.property.1",
-          "value": "test.property-1-value-prod-backoffice",
-          "persona": "production"
+            "key": "storefront.show.debug.info",
+            "value": "false"
+        },
+		{
+            "key": "promotions.legacy.mode",
+            "value": "true"
+        },
+		{
+            "key": "googleApiKey",
+            "value": ""
         },
         {
-          "key": "test.property.2",
-          "value": "test.property-2-value-backoffice"
+            "key": "website.insurance.http",
+            "value": "<website_insurance_http_URL>"
+        },
+        {
+            "key": "website.insurance.https",
+            "value": "<website_insurance_https_URL>"
+        },
+        {
+            "key": "website.banking.http",
+            "value": "<website_banking_http_URL>"
+        },
+        {
+            "key": "website.banking.https",
+            "value": "<website_banking_https_URL>"
+        },
+		{
+            "key": "orbeonweb.orbeon.persistence.uri",
+            "value": "https://localhost:8088/xyformsweb/fr/service/hybris"
+        },
+        {
+            "key": "xyformsservices.orbeon.url.address",
+            "value": "http://localhost:8081/web-orbeon"
+        },
+		{
+            "key": "xyformsstorefrontcommons.orbeon.keystoreFile",
+            "value": "/opt/hybris/bin/platform/tomcat/lib/keystore"
+        },
+        {
+            "key": "tomcat.http.port",
+            "value": "8081"
+        },
+        {
+            "key": "tomcat.https.port",
+            "value": "8088"
+        },
+        {
+            "key": "tomcat.ssl.port",
+            "value": "8088"
+        },
+		{
+            "key": "corsfilter.default.allowedOrigins",
+            "value": "https://localhost:8088"
+        },
+        {
+            "key": "emailservice.send.enabled",
+            "value": "true"
+        },
+        {
+            "key": "mail.smtp.server",
+            "value": "<your_mail_smtp_sever>"
+        },
+        {
+            "key": "mail.smtp.auth",
+            "value": "true"
+        },
+		{
+            "key": "mail.smtp.sendpartial",
+            "value": "true"
+        },
+        {
+            "key": "mail.smtp.password",
+            "value": "<your_password>"
+        },
+        {
+            "key": "mail.smtp.socketFactory.class",
+            "value": "javax.net.ssl.SSLSocketFactory"
+        },
+        {
+            "key": "mail.smtp.user",
+            "value": "<your_email>"
+        },
+        {
+            "key": "mail.smtp.port",
+            "value": "<your_port>"
+        },
+        {
+            "key": "mail.use.tls",
+            "value": "true"
+        },
+		{
+            "key": "mail.replyto",
+            "value": "<your_email>"
+        },
+        {
+            "key": "default.session.timeout",
+            "value": "360"
         }
-      ],
-      "webapps": [
+    ],
+    "aspects": [
         {
-          "name": "hac",
-          "contextPath": "/hac"
+            "name": "backoffice",
+            "properties": [
+
+            ],
+            "webapps": [
+                {
+                    "name": "hac",
+                    "contextPath": "/hac"
+                },
+                {
+                    "name": "mediaweb",
+                    "contextPath": "/medias"
+                },
+                {
+                    "name": "backoffice",
+                    "contextPath": "/backoffice"
+                },
+                {
+                    "name": "orbeonweb",
+					"contextPath": "/web-orbeon"
+                },
+				{
+                    "name": "xyformsweb",
+					"contextPath": "/xyformsweb"
+                },
+				{
+                    "name": "productcockpit",
+					"contextPath": "/productcockpit"
+                },
+				{
+                    "name": "cmscockpit",
+					"contextPath": "/cmscockpit"
+                }
+            ]
         },
         {
-          "name": "mediaweb",
-          "contextPath": "/medias"
+            "name": "accstorefront",
+            "properties": [
+                {
+                    "key": "spring.session.enabled",
+                    "value": "true"
+                },
+                {
+                    "key": "spring.session.yacceleratorstorefront.save",
+                    "value":"async"
+                },
+                {
+                    "key": "spring.session.yacceleratorstorefront.cookie.name",
+                    "value": "JSESSIONID"
+                },
+                {
+                    "key": "spring.session.yacceleratorstorefront.cookie.path",
+                    "value": "/yacceleratorstorefront"
+                },
+                {
+                    "key":"storefrontContextRoot",
+                    "value":"yacceleratorstorefront"
+                },
+		{
+			"key": "sop.post.url",
+			"value": "/acceleratorservices/sop-mock/process"
+		},
+                {
+                    "key":"xss.filter.header.X-Frame-Options",
+                    "value":""
+                }
+            ],
+            "webapps": [
+                {
+                    "name": "hac",
+                    "contextPath": "/hac"
+                },
+                {
+                    "name": "mediaweb",
+                    "contextPath": "/medias"
+                },
+                {
+                    "name": "yacceleratorstorefront",
+                    "contextPath": "/yacceleratorstorefront"
+                },
+                {
+                    "name": "orbeonweb",
+					"contextPath": "/web-orbeon"
+                },
+				{
+                    "name": "xyformsweb",
+					"contextPath": "/xyformsweb"
+                },
+				{
+					"name": "maintenanceweb",
+					"contextPath": "/maintenance"
+                },
+                {
+                    "name": "smartedit",
+                    "contextPath": "/smartedit"
+                },
+                {
+                    "name": "ycommercewebservices",
+	                "contextPath": "/rest"
+                },
+                {
+                    "name": "cmssmartedit",
+	                "contextPath": "/cmssmartedit"
+                },
+                {
+                    "name": "cmssmarteditwebservices",
+	                "contextPath": "/cmssmarteditwebservices"
+                },
+                {
+                    "name": "cmswebservices",
+	                "contextPath": "/cmswebservices"
+                },
+                {
+                    "name": "financialsmartedit",
+	                "contextPath": "/financialsmartedit"
+                },
+                {
+                    "name": "financialwebservices",
+	                "contextPath": "/financialwebservices"
+                },
+                {
+                    "name": "oauth2",
+	                "contextPath": "/authorizationserver"
+                },
+                {
+                    "name": "odata2webservices",
+	                "contextPath": "/odata2webservices"
+                },
+                {
+                    "name": "permissionswebservices",
+	                "contextPath": "/permissionswebservices"
+                },
+                {
+                    "name": "previewwebservices",
+	                "contextPath": "/previewwebservices"
+                },
+                {
+                    "name": "smarteditwebservices",
+	                "contextPath": "/smarteditwebservices"
+                },
+                {
+                    "name": "acceleratorservices",
+                    "contextPath": "/acceleratorservices"
+                }
+            ]
         },
         {
-          "name": "backoffice",
-          "contextPath": ""
+            "name": "backgroundProcessing",
+            "properties": [
+
+            ],
+            "webapps": [
+                {
+                    "name": "hac",
+                    "contextPath": "/hac"
+                },
+                {
+                    "name": "mediaweb",
+                    "contextPath": "/medias"
+                }
+            ]
         }
-      ]
-    },
-    {
-      "name": "accstorefront",
-      "properties": [
-        {
-          "key": "spring.session.enabled",
-          "value": "false"
-        },
-        {
-          "key":"storefrontContextRoot",
-          "value":"/yacceleratorstorefront"
-        }
-      ],
-      "webapps": [
-        {
-          "name": "mediaweb",
-          "contextPath": "/medias"
-        },
-        {
-          "name": "yacceleratorstorefront",
-          "contextPath": ""
-        },
-        {
-          "name": "b2ctelcowebservices",
-          "contextPath": "/b2ctelcowebservices"
-        },
-        {
-          "name":"oauth2",
-          "contextPath" :"/authorizationserver"
-        },
-        {
-          "name": "acceleratorservices",
-          "contextPath": "/acceleratorservices"
-        },
-        {
-          "name": "smartedit",
-          "contextPath": "/smartedit"
-        },
-        {
-          "name": "cmssmartedit",
-          "contextPath": "/cmssmartedit"
-        },
-        {
-          "name": "cmssmarteditwebservices",
-          "contextPath": "/cmssmarteditwebservices"
-        },
-        {
-          "name": "smarteditwebservices",
-          "contextPath": "/smarteditwebservices"
-        },
-        {
-          "name": "cmscockpit",
-          "contextPath": "/cmscockpit"
-        },
-        {
-          "name": "cmswebservices",
-          "contextPath": "/cmswebservices"
-        },
-        {
-          "name": "cscockpit",
-          "contextPath": "/cscockpit"
-        },
-        {
-          "name": "maintenanceweb",
-          "contextPath": "/maintenance"
-        },
-        {
-          "name": "permissionswebservices",
-          "contextPath": "/permissionswebservices"
-        },
-        {
-          "name": "personalizationsmartedit",
-          "contextPath": "/personalizationsmartedit"
-        },
-        {
-          "name": "personalizationwebservices",
-          "contextPath": "/personalizationwebservices"
-        },
-        {
-          "name": "previewwebservices",
-          "contextPath": "/previewwebservices"
-        },
-        {
-          "name": "ycommercewebservices",
-          "contextPath": "/rest"
-        },
-        {
-          "name" : "b2ctelcotmfwebservices",
-          "contextPath" : "/b2ctelcotmfwebservices"
-        }
-      ]
-    },
-    {
-      "name": "backgroundProcessing",
-      "properties": [],
-      "webapps": [
-        {
-          "name": "hac",
-          "contextPath": ""
-        },
-        {
-          "name": "mediaweb",
-          "contextPath": "/medias"
-        }
-      ]
+    ],
+    "tests": {
+        "extensions": [
+            
+        ],
+        "annotations": ["UnitTests", "IntegrationTests"],
+        "packages": ["de.hybris.platform.*"]
     }
-  ]
 }
